--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "HEXAGONZ",
+  "name": "ZEEVALYA",
   "version": "1.0.0",
-  "description": "HEXA",
+  "description": "CHRIST",
   "main": "main.js",
   "directories": {
     "lib": "lib"
